# rofa-dev

./: .gitattributes  .gitignore  .pre-commit-config.yaml  LICENSE  LICENSE‎  README.md  aloe_test.ipynb  pyproject.toml
docs/: DATA_FORMAT.md  REPRODUCIBILITY.md
docs/papers/: references.bib
docs/papers/from_answers_to_hypotheses/: README.md  paper.md  paper.tex  references.tex
notebooks/: 01_colab_generate_greedy.ipynb  02_colab_generate_branches.ipynb  10_colab_generate.ipynb  10_colab_generate_greedy.ipynb  11_colab_generate_branches.ipynb  20_local_analyze.ipynb  20_paper_reproduce.ipynb
notebooks/_legacy/: aloe_test.ipynb
notebooks/from_answers_to_hypotheses/: 10_colab_generate.ipynb  20_paper_reproduce.ipynb  30_cgvf_lite.ipynb
rofa/: __init__.py  analysis.py  io.py  methods.py  model.py  parse.py  question_set.py  runner.py  schemas.py
rofa/analysis/: __init__.py  plots.py
rofa/core/: __init__.py  accel.py  cgvf_lite.py  debug.py  generation.py  io.py  metrics.py  model.py  model_id.py  parse.py  question_set.py  registry.py  run_paths.py  runner.py  schemas.py  tokens.py
rofa/papers/: __init__.py
rofa/papers/from_answers_to_hypotheses/: __init__.py  analysis.py  config.py  methods.py  notebook_helpers.py  prompts.py
scripts/: analyze.py  audit.sh  cgvf_lite.py  clean_cache.sh  generate.py  pack_run.py  reproduce.py  validate_run.py
tests/: test_cgvf_lite_controller.py  test_integration_run.py  test_io_resume.py  test_io_utils.py  test_metrics.py  test_metrics_additional.py  test_parse.py  test_parse_debug.py  test_reports_generation.py  test_top2_flip_analysis.py  test_top2_flip_feasibility_plot.py
tests/data/greedy_test/: manifest.json  progress.json  question_set.json  summary.jsonl
tests/data/k_sample_ensemble_test/: full.jsonl  manifest.json  progress.json  summary.jsonl
tests/data/reports/k_sample_ensemble_test/: max_frac_distribution.csv  paper_report.json  report.json  rw_other_breakdown.csv  subject_accuracy.csv
