[project]
name = "rofa"
version = "0.1.0"
description = "Refactor of ROFA notebook into a research-grade repo"
readme = "README.md"
requires-python = ">=3.10"
license = { text = "MIT" }

dependencies = [
  "torch",
  "transformers",
  "datasets",
]

[project.optional-dependencies]
test = ["pytest"]

[build-system]
requires = ["setuptools", "wheel"]
build-backend = "setuptools.build_meta"
